kuber/backend/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ration-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ration-backend
  template:
    metadata:
      labels:
        app: ration-backend
    spec:
      containers:
        - name: ration-backend
          image: candycandymee/ration-backend:v4
          imagePullPolicy: Always
          ports:
            - containerPort: 3000

          readinessProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
