kuber/backend/backend-ser.yaml
apiVersion: v1
kind: Service
metadata:
  name: ration-backend-service
spec:
  selector:
    app: ration-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
