kuber/backend/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ration-backend-ingress

spec:
  ingressClassName: nginx
  rules:
  - host: api.ration
    http:
      paths: 
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ration-backend-service
            port:
              number: 3000
